codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__reasoning_shortcut_max_footer.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: snapshot
---
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  GPT-5.5 max                                                                   "
