codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__remote_control_pairing_result.snap
---
source: tui/src/chatwidget/tests/slash_commands.rs
expression: rendered
---
Remote control pairing
Allow this device to control this Codex session?
Code: TXNHF-FHZDA
Scope: This Codex session
Expires: 2026-04-15 11:54:56 UTC
