codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_thread_rollback_turn_context_diff_info_messages.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 3146
expression: rendered
---
• Permissions updated to Smart Approvals

• Model changed to gpt-5.4 high for Plan mode.

• Personality set to Pragmatic

• Directory changed to /tmp/current
