codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__review_command_during_mcp_startup_opens_popup.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: popup
---
  Select a review preset

› 1. Review against a base branch  (PR Style)
  2. Review uncommitted changes
  3. Review a commit
  4. Custom review instructions

  Press enter to confirm or esc to go back
